# VietnameseTTS-qwentts-GUI

./: .gitignore  README.md  install_uv_windows.bat  pyproject.toml  requirements.txt  run_gui.bat  run_web.bat
app/: __init__.py  bootstrap.py  engine.py  gui.py  ime_support.py  paths.py  platform_fixes.py  preset.py  runtime_state.py  voice_prompt_cache.py  webapp.py
